[package]
name = "yt-cli"
version = "1.1.0"
edition = "2021"
authors = ["Anup"]
license = "MIT"
description = "A tool to play YT video from the cli"
readme = "README.md"
homepage = "https://github.com/pandeyanup/yt-cli"
repository = "https://github.com/pandeyanup/yt-cli"
keywords = ["cli", "yt", "video"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
colored = "2.1.0"
ctrlc = "3.4.2"
dashmap = "5.5.3"
dialoguer = "0.11.0"
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
