[package]
name = "yt-cli"
version = "1.4.0"
edition = "2021"
authors = ["Anup"]
license = "MIT"
description = "A tool to play YT video from the cli"
readme = "README.md"
homepage = "https://github.com/pandeyanup/yt-cli"
repository = "https://github.com/pandeyanup/yt-cli"
keywords = ["cli", "yt", "video"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ctrlc = "3.4.2"
dashmap = "5.5.3"
ratatui = { version = "0.26.0", features = ["termion", "all-widgets"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
